--- a/sass/cards/_card-mixin-variables.scss
+++ b/sass/cards/_card-mixin-variables.scss
@@ -51,6 +51,7 @@
 		url('../fonts/icomoon/icomoon.svg?srf3rx#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
+	font-display:swap;
 }
 
 @mixin icomoon() {
